# gmres

./: .gitignore  CMakeLists.txt  README.md
include/: vadd_api.h
include/internal/kernel/: vadd_kernel.h
samples/: CMakeLists.txt  vadd_demo.cc
src/: CMakeLists.txt
src/api/: vadd_api.cc
src/kernel/: vadd_kernel.cu
tests/: CMakeLists.txt
tests/include/fixtures/: vadd_api_fixture.h
tests/src/: test_main.cc
tests/src/fixtures/: vadd_api_fixture.cc
tests/unit/: TEST_vadd_api.cc  TEST_vadd_kernel.cc
